<resources>
    <string name="app_name">Olyx Admin</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_email">email@gmail.com</string>
    <string name="email_address">Email address</string>
    <string name="password_hint">strong password</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_user_account">Create user account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hint_username">proprietors name</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign up</string>
    <string name="intro_title">Greatness, and accountability starts here</string>
    <string name="next">Continue</string>
    <string name="business_name">business name</string>
    <string name="user_account">User account</string>
    <string name="dashboard">Dashboard</string>
    <string name="sign_in_here">Sign in here</string>
    <string name="delete_store">Delete Store</string>
    <string name="submit_changes">Update</string>
    <string name="accessories">Accessories</string>
    <string name="gas_refill">Gas Refill</string>
    <string name="new_gas_cylinders">New Gas</string>
    <string name="view_items">view items</string>
    <string name="total_number_of_items_in_all_categories">Total number of items in all categories</string>
    <string name="total_listed_accessories">total listed accessories</string>
    <string name="zero">0</string>
    <string name="catalogue">Catalogue</string>
    <string name="item_category">item category</string>
    <string name="search_hint">search expenditure</string>
    <string name="search_transaction">search by product</string>
    <string name="logout_from_the_app">Logout from the app?</string>
    <string name="logout">Logout</string>
    <string name="not_now">Not now</string>
    <string name="yes">Yes, log me out</string>
    <string name="sign_out_notification">You can always login later. Until then, your account stays safe.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="cancel">Cancel</string>
    <string name="reset_password">Yes, I\'d like to reset it</string>
    <string name="password_reset_instructions">To reset your password, you are required to key in the email address used to create this account. Be sure to have it\'s access, otherwise you may not be able to recover your account.</string>
    <string name="products">Products</string>
    <string name="found_items">Items found :</string>
    <string name="add_catalogue_item">Add Catalogue Item</string>
    <string name="search_expenses">search by category</string>
    <string name="brand">GasTrack</string>
    <string name="check_out">Check out</string>
    <string name="total_spend_kes">Total in KES</string>
    <string name="transact">Transact</string>
    <string name="total_credit_balance">Total balance</string>
    <string name="transaction_in_progress">Transaction in progress...</string>
    <string name="debtors">Lending list</string>
    <string name="credit_sales">Credit sales</string>
    <string name="search_credit_sales">search by phone</string>
    <string name="new_sale">New sale</string>
    <string name="restock_product">Restock product</string>
    <string name="terminate">Terminate</string>
    <string name="transfer">Transfer</string>
    <string name="outlet_name">Outlet name</string>
    <string name="outlet">Outlet</string>
    <string name="attendant">Attendant</string>
    <string name="attendant_name">Attendant name</string>
    <string name="manage_attendant">Manage Attendant</string>
    <string name="enterprise">Enterprise :</string>
    <string name="select_outlet">Select outlet</string>
    <string name="commit_this_transfer">Commit this transfer</string>
    <string name="welcome_to">Welcome to:</string>
    <string name="overview">Here\'s an overview of your business :</string>
    <string name="transactions">Transactions</string>
    <string name="filter_by_outlet">Filter by outlet</string>

    <string-array name="stockItems">
        <item>Select category</item>
        <item>Gas Refill</item>
        <item>New Cylinder</item>
        <item>Accessory</item>
    </string-array>


</resources>