<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/transaction_dialog_bg"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:text="@string/forgot_password"
        android:textColor="@color/text"
        android:textStyle="bold"
        android:textSize="18sp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/lato"
        android:text="@string/password_reset_instructions"
        android:textColor="@color/text"
        android:justificationMode="inter_word"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lato"
        android:text="@string/email_address"
        android:textColor="@color/text"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edt_background"
        android:hint="@string/sample_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/text"
        android:textCursorDrawable="@null"
        android:textSize="14sp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/lato"
            android:text="@string/cancel"
            android:textColor="@color/text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:fontFamily="@font/lato"
            android:text="@string/reset_password"
            android:textStyle="bold"
            android:textColor="@color/accent"/>

    </RelativeLayout>

</LinearLayout>