<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.fragments.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="Login"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lato"
            android:text="@string/email_address"
            android:textColor="@color/text"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_background"
            android:hint="@string/sample_email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/text"
            android:textCursorDrawable="@null"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lato"
            android:text="@string/password"
            android:textColor="@color/text"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_background"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColorHint="@color/text"
            android:textCursorDrawable="@null"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/tv_forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lato"
            android:text="@string/forgot_password"
            android:textColor="@color/text"
            android:textStyle="bold"
            android:layout_gravity="end"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lato"
            android:padding="10dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/text"
            android:textStyle="bold"
            app:backgroundTint="@color/accent" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/lato"
                android:text="@string/sign_up_here"
                android:textColor="@color/text"
                android:textStyle="bold"
                android:textSize="16sp"/>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>