<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    app:cardCornerRadius="5dp"
    app:cardBackgroundColor="@color/cardLight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:fontFamily="@font/lato"
                android:text="@string/manage_attendant"
                android:textColor="@color/text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_cancel"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/dialog_edt_background"
                android:src="@drawable/ic_close"
                app:tint="@color/buttonBg"
                android:padding="8dp"/>


        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:layout_marginTop="10dp"
            android:text="@string/attendant"
            android:textColor="@color/text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_attendant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/attendant_name"
            android:textColor="@color/text"
            android:textStyle="bold"
            android:background="@drawable/dialog_edt_background"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:layout_marginTop="10dp"
            android:text="@string/outlet"
            android:textColor="@color/text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_outlet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/outlet_name"
            android:textColor="@color/text"
            android:textStyle="bold"
            android:background="@drawable/dialog_edt_background"
            android:layout_marginTop="10dp"/>

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp">

          <Button
              android:id="@+id/btn_terminate"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentStart="true"
              android:layout_centerInParent="true"
              android:fontFamily="@font/lato"
              android:text="@string/terminate"
              android:textAllCaps="false"
              android:textColor="@color/buttonBg"
              android:textStyle="bold"
              app:backgroundTint="@color/black" />

          <Button
              android:id="@+id/btn_transfer"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentEnd="true"
              android:layout_centerInParent="true"
              android:fontFamily="@font/lato"
              android:text="@string/transfer"
              android:textAllCaps="false"
              android:textColor="@color/black"
              android:textStyle="bold"
              app:backgroundTint="@color/buttonBg" />

      </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>