<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="10dp"
    tools:context=".ui.fragments.SellFragment">

    <RelativeLayout
        android:id="@+id/layer_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_dash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/lato"
            android:text="@string/new_sale"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layer_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layer_one"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:visibility="visible">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_refill"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/lato"
            android:text="Gas refill"
            android:textAllCaps="false"
            android:textColor="@color/text"
            android:textStyle="bold"
            app:strokeColor="@color/text"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_buy_gas"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/lato"
            android:text="Gas sale"
            android:textAllCaps="false"
            android:textColor="@color/accentTwo"
            android:textStyle="bold"
            app:strokeColor="@color/accentTwo"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_buy_accessory"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/lato"
            android:text="Accessories"
            android:textAllCaps="false"
            android:textColor="@color/accentThree"
            android:textStyle="bold"
            app:strokeColor="@color/accentThree"
            app:strokeWidth="1dp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_sales"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layer_two"
        android:layout_marginTop="10dp"
        android:layout_above="@+id/layer_bottom"/>

    <RelativeLayout
        android:id="@+id/layer_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:background="@color/background"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/lato"
            android:gravity="end"
            android:text="@string/total_spend_kes"
            android:textColor="@color/text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_total_spend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/text"
            android:fontFamily="@font/lato"
            android:gravity="end"
            android:text="@string/zero"
            android:textColor="@color/text"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_check_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/lato"
            android:padding="10dp"
            android:text="@string/check_out"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:backgroundTint="@color/buttonBg" />

    </RelativeLayout>

</RelativeLayout>